[package]
name = "mairs"
version = "0.1.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/Kas-O-dam/mairs"
description = "This is library was created for simply programing CLI programs, with the simplest console graphical interface "

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"] #wasm

[dependencies]
colored = "2.0.4"
